--- a/apps/merchant-app/package.json
+++ b/apps/merchant-app/package.json
@@ -14,7 +14,8 @@
     "@repo/ui": "*",
     "next": "^15.4.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
