--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -11,11 +11,15 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "*",
     "@repo/db": "*",
+    "@repo/store": "*",
+    "@repo/ui": "*",
+    "bcrypt": "^6.0.0",
     "next": "^15.4.2",
+    "next-auth": "^4.24.11",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
@@ -23,8 +27,8 @@
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
-    "eslint": "^9.31.0",
     "autoprefixer": "^10.4.21",
+    "eslint": "^9.31.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "5.8.2"
